fix: bound canonical provider capture